[gd_scene load_steps=3 format=3 uid="uid://cx4gg1tgk7dwh"]

[ext_resource type="Script" path="res://select_screen.gd" id="1_vseg4"]
[ext_resource type="PackedScene" uid="uid://dgmbjrk8exgyh" path="res://player.tscn" id="2_cltrb"]

[node name="Game" type="Node3D"]

[node name="World" type="Node3D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="SelectScreen" type="Control" parent="UI" node_paths=PackedStringArray("world")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vseg4")
world = NodePath("../../World")
player_scene = ExtResource("2_cltrb")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/SelectScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -15.5
offset_right = 104.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="MageButton" type="Button" parent="UI/SelectScreen/HBoxContainer"]
layout_mode = 2
text = "MAGE"

[node name="RogueButton" type="Button" parent="UI/SelectScreen/HBoxContainer"]
layout_mode = 2
text = "ROGUE"

[node name="WarriorButton" type="Button" parent="UI/SelectScreen/HBoxContainer"]
layout_mode = 2
text = "WARRIOR"

[connection signal="pressed" from="UI/SelectScreen/HBoxContainer/MageButton" to="UI/SelectScreen" method="_on_mage_button_pressed"]
[connection signal="pressed" from="UI/SelectScreen/HBoxContainer/RogueButton" to="UI/SelectScreen" method="_on_rogue_button_pressed"]
[connection signal="pressed" from="UI/SelectScreen/HBoxContainer/WarriorButton" to="UI/SelectScreen" method="_on_warrior_button_pressed"]
